fix bug state for dark mode

--- a/src/components/KeyPad/style.scss
+++ b/src/components/KeyPad/style.scss
@@ -9,12 +9,12 @@
 
   &--numbers {
     @include animApparition(.3s);
+    transform: translateY(30px);
     display: flex;
     flex-wrap: wrap;
     width: 100vw;
     max-width: 50vh;
     background: vars.$black;
-    transform: translateY(30px);
 
     &--item {
 
@@ -32,6 +32,15 @@
           transform: scale(0.9);
         }
       }
+    }
+
+    &--clear {
+      border-top: 1px solid vars.$light-grey;
+      text-align: center;
+      width: 100%;
+      font-size: 5vw;
+      color: vars.$white;
+      padding: 5vw;
     }
   }
 
@@ -76,6 +85,15 @@
           &:hover {
             background-color: vars.$dark-grey;
           }
+        }
+      }
+
+      &--clear {
+        font-size: 1.5rem;
+        padding: 1.5rem;
+
+        &:hover {
+          background: vars.$dark-grey;
         }
       }
     }
