--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,5 +1,5 @@
 $black: #1D2424;
-$white: #F8F7F9;
+$white: #ececec;
 
 $light-grey: #d6d8da;
 $grey: #58718f;
